# competitive

./: .gitignore  105505F.cpp  112A.cpp  118A.cpp  1353B.cpp  1472B.cpp  158A.cpp  1709A.cpp  1742A.cpp  1A.cpp  200B.cpp  2038L.cpp  236a.cpp  263A.cpp  266A.cpp  266B.cpp  281A.cpp  339A.cpp  50A.cpp  546A.cpp  598A.cpp  69A.cpp  791A.cpp  CMakeLists.txt  bit++.cpp  long_words.cpp  team.cpp  watermelon.cpp
