cmake_minimum_required(VERSION 3.29)
project(training)

set(CMAKE_CXX_STANDARD 11)

add_executable(watermelon watermelon.cpp)
add_executable(long_words long_words.cpp)
add_executable(team team.cpp)
add_executable(bit bit++.cpp)
add_executable(158A 158A.cpp)
add_executable(50A 50A.cpp)
add_executable(263A 263A.cpp)
add_executable(112A 112A.cpp)
add_executable(339A 339A.cpp)
add_executable(281A 281A.cpp)
add_executable(236A 236a.cpp)
add_executable(266A 266A.cpp)
add_executable(791A 791A.cpp)
add_executable(1353B 1353B.cpp)
add_executable(546A 546A.cpp)
add_executable(105505F 105505F.cpp)
add_executable(266B 266B.cpp)
add_executable(200B 200B.cpp)
add_executable(1472B 1472B.cpp)
add_executable(1709A 1709A.cpp)
add_executable(2038L 2038L.cpp)
add_executable(1A 1A.cpp)
add_executable(118A 118A.cpp)
